--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,15 @@ body {
   margin-top: 0.5em;
 }
 
+@media screen and (max-width: 768px) {
+  .header {
+    background: #4C687F;
+    text-align: center;
+    color:white;
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 0.5em; } }
+
 .sideBarResizeContainer {
   width: 30%;
 }
